--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,3 +29,18 @@ body {
   width: min(1000px, 92vw); 
   margin: 28px auto 64px; 
 } 
+
+.material-icons { 
+  font-family: "Material Icons" !important;
+  font-weight: normal !important;
+  font-style: normal !important;
+  font-size: 20px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  direction: ltr;
+  -webkit-font-feature-settings: "liga";
+  -webkit-font-smoothing: antialiased;
+}
